feat: update the project info

--- a/cv.tex
+++ b/cv.tex
@@ -42,24 +42,24 @@
         
         \begin{rSubsection2}{Education}
 
-            \item\textbf{ Master's degree }\hfill \textbf{Mar., 2022 $\rightarrow$ Oct., 2024}
+            \item\textbf{ Master's degree }\hfill \textbf{March, 2022 $\rightarrow$ October, 2024}
             \\Computer Science (Intelligent and Adoptive Systems), University of Camerino, Italy.
             \\Studies in the field of programming paradigms, complex systems, distributed systems, machine learning, web applications, data mining.
             \\106/110
             %
-            \item\textbf{ Master's degree thesis }\hfill \textbf{Aug., 2023 $\rightarrow$ Jul., 2024}
-            \\Identification of Workflows and Files contributing to TD through Commit-Level Analysis across the GitHub Action
+            \item\textbf{ Master's degree thesis }\hfill \textbf{August, 2023 $\rightarrow$ July, 2024}
+            \\Identification of Workflows and Files contributing to TD through Commit-Level Analysis across the GitHub Action.
             \\Relator: Prof. Flavio Corradini
             \\Co-relator: Prof. Antonio Martini
             \\We developed a model to mine data from GitHub Actions and employed an NLP model for automatic text classification.
             Our model identifies files and workflows within GitHub Actions that are likely to introduce technical debt (TD) and visualizes them.
             This represents a significant advancement in TD identification and mitigation during software development processes.
             %
-            \item\textbf{ Bachelor of Technology }\hfill \textbf{Jul., 2016 $\rightarrow$ Jul., 2021}
+            \item\textbf{ Bachelor of Technology }\hfill \textbf{July, 2016 $\rightarrow$ July, 2021}
             \\Electronics and Communication Engineering, NIT Kurukshetra, India (standard duration for engineering programs is four years).
             \\7.1/10
             %
-            \item\textbf{ Bachelor's degree thesis }\hfill \textbf{Dec., 14, 2018}
+            \item\textbf{ Bachelor's degree thesis }\hfill \textbf{January, 2020 $\rightarrow$ May, 2020}
             \\Implementation of Smart crates and IoT on the Fly Food Inventory Monitoring and Automatic Stock Renewal
             \\Relator: Prof. Chhagan Charan
             \\A novel system of intelligent food content monitoring has been developed, using intelligent sensing systems that continuously monitor perishable food levels while automatically placing orders for renewal of stock.
@@ -91,7 +91,7 @@
 
         \begin{rSubsection2}{Other Contracts}
 
-            \item\textbf{ Internship }\hfill \textbf{Dec, 2024}
+            \item\textbf{ Internship }\hfill \textbf{December, 2024 $\rightarrow$ Now}
             \\Department: Mathematics and Cybernetics, Oslo, Norway.
             \\Support the EU project THEMIS with detection of misinformation using natural language processing (NLP).
 
@@ -99,10 +99,9 @@
 
         \begin{rSubsection2}{Post Graduation Courses}
 
-            \item\textbf{ Internship }\hfill \textbf{Dec, 2024}
-            \\ Junior Cloud Specialist Course (Online)
-            \\ Generation Italy
-            \\ Course Info: \href{https://italy.generation.org/programs/cloud-specialist/}{Cloud Specialist Course}
+            \item\textbf{Junior Cloud Specialist Course}\hfill \textbf{December, 2024 $\rightarrow$ Now}
+            \\Generation Italy
+            \\Course Info: \href{https://italy.generation.org/programs/cloud-specialist/}{Cloud Specialist Course}
 
         \end{rSubsection2}
 
@@ -118,10 +117,10 @@
     %----------------------------------------------------------------------------------------
         \begin{rSubsection2}{Teaching Activity}
 
-            \item\textbf{ Teaching for the course JavaScript }\hfill \textbf{Jul, 2022 $->$ Sep, 2022}
-            \\ CodeWeekend (Online)
-            \\ Delivered online JavaScript coding lessons as part of a bootcamp organized by CodeWeekend for aspiring developers.
-            \\ More about CodeWeekend:\href{https://codeweekend.net/}
+            \item\textbf{ Teaching for the course JavaScript }\hfill \textbf{July, 2022 $\rightarrow$ September, 2022}
+            \\CodeWeekend (Online)
+            \\Delivered online JavaScript coding lessons as part of a bootcamp organized by CodeWeekend for aspiring developers.
+            \\More Info: \href{https://codeweekend.net/}{CodeWeekend}
 
         \end{rSubsection2}
 
@@ -134,9 +133,9 @@
         %----------------------------------------------------------------------------------------
         \begin{rSubsection2}{International Experience}
 
-            \item\textbf{ Visiting Researcher Student (Master's Thesis)}\hfill \textbf{Aug, 2023 $\rightarrow$ Jul, 2024}
+            \item\textbf{ Visiting Researcher Student (Master's Thesis)}\hfill \textbf{Aug, 2023 $\rightarrow$ July, 2024}
             \\Department of Informatics, University of Oslo, Norway
-            \\Identification of Workflows and Files contributing to TD through Commit-Level Analysis across the GitHub Action
+            \\Identification of Workflows and Files contributing to TD through Commit-Level Analysis across the GitHub Action.
             \\Supervisor: Prof. \href{mailto:antonima@ifi.uio.no}{Antonio Martini}
 
         \end{rSubsection2}
@@ -155,25 +154,19 @@
         %----------------------------------------------------------------------------------------
         %	SOFTWARE DEVELOPMENT
         %----------------------------------------------------------------------------------------
+        \begin{rSubsection2}{ Projects }
 
-        %----------------------------------------------------------------------------------------
-        %	TECHNICAL STRENGTHS SECTION
-        %----------------------------------------------------------------------------------------
-        % \newpage
-        \begin{rNoListSubsection}{Technical Strengths}{}{}{}
-            \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-                Programming Paradigms	& imperative, object oriented, functional, logic\\
-                Software configuration 	& Windows and Linux installation and configuration\\
-                Programming Languages 	& Python, Java, C, C++, Prolog, JavaScript\\
-                Data Analysis Tools		& Pandas, NumPy, Scikitlearn, Tensorflow, Pytorch\\
-                Networking 				& Socket (TCP \& UDP), HTTP, RESTful API \\
-                Databases 				& SQL, MySQL, MongoDB \\
-                Development tools 		& Git, Docker, Continuous Integration \\
-                Markup languages 		& Markdown, \LaTeX, HTML\\
-                IDEs 					& PyCharm, Visual Studio, Eclipse
-            \end{tabular}
-        \end{rNoListSubsection}
+            \item\textbf{ SuMo Extension for VSCode IDE }\hfill \textbf{November, 2022 $\rightarrow$ January, 2023}
+            \\Group project developed as part of the Master's degree curriculum.
+            \\The SuMo Extension for Visual Studio Code allows Ethereum developers to use the mutation testing tool for Solidity Smart Contracts.
+            \\GitHub Repository: \href{https://github.com/FabrizioFornari/SPM-2022-AAR}{SoMo Extention}. For access, please contact \href{https://github.com/FabrizioFornari}{Prof. Fabrizio Fornari}.
 
+            \item\textbf{ Deep Learning-Based Real-Time AI Virtual Mouse System }\hfill \textbf{April, 2022 $\rightarrow$ June, 2022}
+            \\This model utilizes contemporary Machine Learning and Computer Vision techniques to identify hand gestures and execute mouse commands,
+            The AI virtual mouse system was developed using the Python programming language, and the OpenCV library for computer vision.
+            Additionally, the MediaPipe package was utilized to track both the hands and the tips of the hands.
+
+        \end{rSubsection2}
         %----------------------------------------------------------------------------------------
         %	LANGUAGE SECTION
         %----------------------------------------------------------------------------------------
@@ -192,12 +185,32 @@
         \end{rNoListSubsection}
 
         %----------------------------------------------------------------------------------------
+        %	TECHNICAL STRENGTHS SECTION
+        %----------------------------------------------------------------------------------------
+        \newpage
+
+        \begin{rNoListSubsection}{Technical Strengths}{}{}{}
+            \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
+                Programming Paradigms	& imperative, object oriented, functional, logic\\
+                Software configuration 	& Windows and Linux installation and configuration\\
+                Programming Languages 	& Python, Java, C, C++, Prolog, JavaScript\\
+                Data Analysis Tools		& Pandas, NumPy, Scikitlearn, Tensorflow, Pytorch\\
+                Networking 				& Socket (TCP \& UDP), HTTP, RESTful API \\
+                Databases 				& SQL, MySQL, MongoDB \\
+                Development tools 		& Git, Docker, Continuous Integration \\
+                Markup languages 		& Markdown,\LaTeX, HTML\\
+                IDEs 					& PyCharm, Visual Studio, Eclipse
+            \end{tabular}
+        \end{rNoListSubsection}
+
+
+        %----------------------------------------------------------------------------------------
         %	ADDITIONAL INFO SECTION
         %----------------------------------------------------------------------------------------
 
         \begin{rSubsection2}{ Volunteering }
 
-            \item\textbf{ Treffpunkt program }\hfill \textbf{Nov, 2023 $->$ Jul, 2024}
+            \item\textbf{ Treffpunkt program }\hfill \textbf{November, 2023 $\rightarrow$ July, 2024}
             \\ Red Cross, Oslo, Norway
             \\ I worked as a volunteer for the Red Cross Youth programme (Treffpunkt), which is an inclusion activity for youth.
              it aims to provide a platform for young people to connect and build relationships.
