feat: add grants section

--- a/cv.tex
+++ b/cv.tex
@@ -49,19 +49,20 @@
             %
             \item\textbf{ Master's degree thesis }\hfill \textbf{August, 2023 $\rightarrow$ July, 2024}
             \\Identification of Workflows and Files contributing to TD through Commit-Level Analysis across the GitHub Action.
-            \\Relator: Prof. Flavio Corradini
-            \\Co-relator: Prof. Antonio Martini
-            \\We developed a model to mine data from GitHub Actions and employed an NLP model for automatic text classification.
+            \\Relator: \href{mailto:flavio.corradini@unicam.it}{Prof. Flavio Corradini}
+            \\Co-relator: \href{mailto:antonima@ifi.uio.no}{Prof. Antonio Martini}
+            \\We developed a model to mine data from GitHub Actions and employed natural language processing (NLP) model for automatic text classification.
             Our model identifies files and workflows within GitHub Actions that are likely to introduce technical debt (TD) and visualizes them.
             This represents a significant advancement in TD identification and mitigation during software development processes.
+            \\GitHub repository: \href{https://github.com/Aqila-Farahmand/MasterThesis}{github.com/Aqila-Farahmand/MasterThesis}
             %
             \item\textbf{ Bachelor of Technology }\hfill \textbf{July, 2016 $\rightarrow$ July, 2021}
             \\Electronics and Communication Engineering, NIT Kurukshetra, India (standard duration for engineering programs is four years).
             \\7.1/10
             %
             \item\textbf{ Bachelor's degree thesis }\hfill \textbf{January, 2020 $\rightarrow$ May, 2020}
-            \\Implementation of Smart crates and IoT on the Fly Food Inventory Monitoring and Automatic Stock Renewal
-            \\Relator: Prof. Chhagan Charan
+            \\Implementation of Smart crates and IoT on the Fly Food Inventory Monitoring and Automatic Stock Renewal.
+            \\Relator: \href{mailto:chhagan.charan@nitkkr.ac.in}{Prof. Chhagan Charan}
             \\A novel system of intelligent food content monitoring has been developed, using intelligent sensing systems that continuously monitor perishable food levels while automatically placing orders for renewal of stock.
             This system has significant implications for warehouses and wholesalers, as it facilitates the exchange of goods using smart crates equipped with internet-of-things sensing systems linked to a web application.
             %
@@ -89,11 +90,12 @@
         %	OTHER CONTRACTS SECTION
         %----------------------------------------------------------------------------------------
 
-        \begin{rSubsection2}{Other Contracts}
+        \begin{rSubsection2}{Contracts}
 
             \item\textbf{ Internship }\hfill \textbf{December, 2024 $\rightarrow$ Now}
             \\Department: Mathematics and Cybernetics, Oslo, Norway.
-            \\Support the EU project THEMIS with detection of misinformation using natural language processing (NLP).
+            \\Support the EU project THEMIS with detection of misinformation using NLP .
+            \\Supervisor: \href{mailto:Signe.Riemer-Sorensen@sintef.no}{Signe Riemer-Sørensen}
 
         \end{rSubsection2}
 
@@ -120,7 +122,7 @@
             \item\textbf{ Teaching for the course JavaScript }\hfill \textbf{July, 2022 $\rightarrow$ September, 2022}
             \\CodeWeekend (Online)
             \\Delivered online JavaScript coding lessons as part of a bootcamp organized by CodeWeekend for aspiring developers.
-            \\More Info: \href{https://codeweekend.net/}{CodeWeekend}
+            \\About Bootcamp: \href{https://codeweekend.net/}{codeweekend.net}
 
         \end{rSubsection2}
 
@@ -138,6 +140,11 @@
             \\Identification of Workflows and Files contributing to TD through Commit-Level Analysis across the GitHub Action.
             \\Supervisor: Prof. \href{mailto:antonima@ifi.uio.no}{Antonio Martini}
 
+        \end{rSubsection2}
+
+        \begin{rSubsection2}{Grants}
+            \item\textbf{ERASMUS Traineeship }\hfill \textbf{November, 2023 $\rightarrow$ May, 2024}
+            \\ERASMUS Traineeship grant for doing thesis abroad.
         \end{rSubsection2}
 
     \end{rSection}
